# llm_wiki

./: .gitignore  .pre-commit-config.yaml  COMPLETION_REPORT.md  COMPLETION_STATUS.md  COMPLETION_SUMMARY.md  DELIVERABLES.md  FILES_CHANGED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_LLMS_FULL_TXT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX_ISSUE_70.md  ISSUE_68_SUMMARY.md  ISSUE_69_SUMMARY.md  ISSUE_80_SUMMARY.md  PROMOTION_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  README_ISSUE_68.md  README_ISSUE_70.md  README_LLMS_FULL_IMPLEMENTATION.md  VERIFICATION_GUIDE.md  pyproject.toml  test_promotion.py  verify_syntax.py
.claude/: bootstrap.md  settings.local.json
.claude/skills/: export.md  govern.md  ingest.md  wiki.md
.cursor/prompts/: add_page.md  check_quality.md  search_wiki.md
.cursor/rules/: 00-llm-wiki.mdc  01-search.mdc  02-ingest.mdc  03-govern.mdc  04-export.mdc  index.mdc
.github/: copilot-instructions.md  copilot-snippets.json
.github/workflows/: ci.yml
.pi/: taskplane.json
config/: contradictions.yaml  daemon.yaml  domains.yaml  models.yaml  routing.yaml
docs/: AGENT_CONVENTIONS.md  AGENT_SUPPORT_MATRIX.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CLI.md  CONFIG.md  CONTRADICTION_DETECTION.md  CONTRADICTION_QUICK_START.md  COPILOT_SETUP.md  CURSOR_SETUP.md  EXPORTS.md  GOVERNANCE.md  IMPLEMENTATION_STATUS.md  PROGRESS.md  PROMOTION.md  SETUP.md  agent_boot_report.md  implementation_step_1.md  implementation_step_2.md  implementation_step_3.md  implementation_step_4.md  overview.md  proposed_issue_tree.md  repo_review_notes.md  roadmap.md
docs/decisions/: 001-model-provider-abstraction.md  002-page-id-generation.md  003-job-scheduler.md  004-single-capture-script.md
docs/export/: llms-full-txt.md
examples/: 01_basic_ingestion.py  02_search_and_query.py  03_governance_maintenance.py  04_export_workflow.py  05_custom_adapter.py  05_llms_full_export.py  06_end_to_end_workflow.py  README.md
scripts/: bootstrap.sh
src/llm_wiki/: __init__.py  cli.py
templates/: concept.md  entity.md  page.md  source.md
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_example.py
tests/integration/: __init__.py  test_backlink_flow.py  test_end_to_end.py  (+8 more)
(+154 files in other folders)
